<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home"
          />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/cliente"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_facturas"
            android:icon="@drawable/facturas"
            android:title="@string/menu_facturas" />
        <item
            android:id="@+id/nav_productos_servicios"
            android:icon="@drawable/inventario"
            android:title="@string/inventario"
            android:actionLayout="@layout/fragment_contenedor_servicios_productos"/>
    </group>
</menu>